<resources>
    <string name="app_version">Version %1$s</string>
    <string name="authenticating">Authenticating …</string>
    <string name="need_account">Cannot run without WarmShowers credentials</string>
    <string name="authentication_failed">Authentication failed. Please re-enter your credentials.</string>
    <string name="no_starred_hosts">You currently have no favorited hosts (hosts whose profiles are available offline). You can favorite hosts on the user information page.</string>
    <string name="empty_inbox">Your inbox is empty.</string>
    <string name="list_search_hint">Name or city</string>
    <string name="no_results">Your search yielded no results.</string>
    <string name="greeting">Hi there!</string>
    <string name="enter_credentials">Please log in using your Warmshowers.org credentials</string>
    <string name="view_details">View details</string>
    <string name="star">Star</string>
    <string name="close">Close</string>
    <string name="username_hint">Username or Email</string>
    <string name="password_hint">Password</string>
    <string name="button_text_login">Log in</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="description">About this member</string>
    <string name="last_login"><u>Last login:</u></string>
    <string name="member_since"><u>Member since:</u></string>
    <string name="location"><u>Location:</u></string>
    <string name="mobile_phone"><u>Mobile phone:</u></string>
    <string name="preferred_notice"><u>Preferred notice:</u></string>
    <string name="max_guests"><u>Max guests:</u></string>
    <string name="nearest_accomodation"><u>Accommodation:</u></string>
    <string name="campground"><u>Campground:</u></string>
    <string name="bike_shop"><u>Bike shop:</u></string>
    <string name="services"><u>May provide:</u></string>
    <string name="home_phone"><u>Home phone:</u></string>
    <string name="work_phone"><u>Work phone:</u></string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="last_updated">Last updated:</string>
    <string name="host_updated">Host information updated.</string>
    <string name="host_not_available">This member is marked as not currently available. You may still contact the member, but not for hosting.</string>
    <string name="unstar_host">Un-favorite this user?</string>
    <string name="user_starred">Member favorited. You can now access this information offline.</string>
    <string name="user_unstarred">Member un-favorited.</string>
    <string name="performing_search">Performing search …</string>
    <string name="io_error">Internet access failure, please check your Internet connection.</string>
    <string name="http_unexpected_failure">Unexpected error accessing server. Check your credentials and Internet connection.</string>
    <string name="subject_hint">Enter subject here</string>
    <string name="message_hint">Enter message here</string>
    <string name="message_validation_error">Both subject and message are required.</string>
    <string name="sending_message">Sending message …</string>
    <string name="error_sending_message">Could not send message. Check your credentials and internet connection.</string>
    <string name="message_sent">Message sent successfully.</string>
    <string name="about_1">Unofficial app created by volunteers and in no way related to WarmShowers LLC.</string>
    <string name="about_2">This application is open source under the Apache 2.0 license. Contribute by forking our repository at github.com/warmshowers/wsandroid.\nPlease, report problems there.</string>
    <string name="feedback">Feedback</string>
    <string name="error_retrieving_messages">An error occurred while retrieving messages.</string>
    <string name="messages_in_progress">Retrieving messages …</string>
    <string name="no_unread_messages">You have no unread messages.</string>
    <plurals name="unread_messages">
        <item quantity="one">You have %d unread message.</item>
        <item quantity="other">You have %d unread messages.</item>
    </plurals>
    <string name="updateMessages">Update</string>
    <plurals name="users_at_location">
        <item quantity="one">%1$d user at %2$s</item>
        <item quantity="other">%1$d hosts at %2$s</item>
    </plurals>
    <string name="view_on_site">View on website</string>
    <plurals name="user_count">
        <item quantity="one">%1$d user at this location</item>
        <item quantity="other">%1$d hosts at this location</item>
    </plurals>
    <string name="click_to_view_all"><strong>Click to view all</strong></string>
    <string name="alert_neutral_button">OK</string>
    <string name="title_fragment_contact_user">Message to %1$s</string>
    <string name="users_dont_load">Host locations don\'t load at this zoom level\nZoom in</string>
    <string name="distance_from_current">%1$d %2$s from current location</string>
    <string name="host_not_currently_available">(Not currently available)</string>
    <string name="host_currently_available">(Available for hosting)</string>
    <string name="parsing_error">Error parsing response from server. Please report this search using the contact form at warmshowers.org.</string>
    <string name="unknown_exception">Unknown error, please report to warmshowers.org contact form: %1$s</string>
    <string name="send_message">Send message</string>
    <string name="view_on_map">View on map</string>
    <string name="view_in_maps_app">View in map application</string>
    <string name="action_settings">Settings</string>
    <string name="leave_feedback">Leave feedback</string>
    <string name="leave_feedback_for">Leave feedback for %1$s</string>
    <string name="viewMessagesOnSite">View messages on site</string>
    <string name="messages_on_site">Messages on site</string>
    <string name="prefs_distance_unit_key" translatable="false">distance_unit</string>
    <string name="prefs_distance_unit_default" translatable="false">@string/distance_unit_kilometers_short_raw</string>
    <string name="prefs_distance_unit_title">Unit of distance</string>
    <string name="prefs_distance_unit_summary">Express distances in %1$s</string>
    <string name="distance_unit_kilometers_long">Kilometers</string>
    <string name="distance_unit_miles_long">Miles</string>
    <string name="distance_unit_kilometers_short">km</string>
    <string name="distance_unit_miles_short">mi</string>
    <string name="distance_unit_kilometers_short_raw" translatable="false">km</string>
    <string name="distance_unit_miles_short_raw" translatable="false">mi</string>
    <string name="prefs_tile_source_key" translatable="false">tile_source</string>
    <string name="prefs_tile_source_title">Map style</string>
    <string name="prefs_tile_source_summary" translatable="false">%1$s</string>
    <string name="prefs_tile_source_us_only">%1$s (US only)</string>
    <string name="prefs_message_refresh_interval_min_key" translatable="false">message_reload_interval_min</string>
    <string name="prefs_message_refresh_interval_min_title">Messages poll frequency</string>
    <plurals name="prefs_message_refresh_interval_min_summary">
        <item quantity="one">Every minute</item>
        <item quantity="other">Every %d minutes</item>
    </plurals>
    <string name="prefs_message_refresh_interval_min_summary_disabled">Disabled</string>
    <string name="prefs_message_refresh_interval_min_dialog_message">Specify how often your messages should be refreshed from the server.</string>
    <string name="prefs_message_refresh_interval_min_hint">Interval (minutes)</string>
    <string name="prefs_data_saver_mode_key" translatable="false">data_saver</string>
    <string name="prefs_data_saver_mode_title">Data saver mode</string>
    <string name="prefs_data_saver_mode_summary">Prevent loading data intensive information such as images.</string>
    <string name="prefscat_dev_title">Developer settings</string>
    <string name="prefs_dev_simulate_no_network_key" translatable="false">dev_simulate_no_network</string>
    <string name="prefs_dev_simulate_no_network_title">Simulate No Service</string>
    <string name="prefs_map_location_latitude_default">21.0000</string>
    <string name="prefs_map_location_longitude_default">-81.0000</string>
    <string name="languages_spoken"><u>Languages spoken:</u></string>
    <string name="map_network_not_connected">Network is not connected, showing starred hosts only.</string>
    <string name="open_in_map_application">Open in maps application</string>
    <string name="star_this_host">Star this user</string>
    <string name="unstar_this_host">Unstar this user</string>
    <string name="no_account">Account information has not been configured. Settings -> Account</string>
    <string name="http_server_access_failure">Failed communicating with server, please check your internet connection</string>
    <string name="host_info_basic_information">Basic information</string>
    <string name="json_error">Failed to parse json string returned from server</string>
    <string name="sending_feedback">Sending feedback</string>
    <string name="feedback_hint">Describe your experience with this member.</string>
    <string name="feedback_validation_error">You must enter at least 10 words feedback section.</string>
    <string name="feedback_sent">Your feedback for %1$s has been sent</string>
    <string name="leaving_feedback">Leaving feedback for %1$s</string>
    <string name="feedback_how_we_met_prompt">How did you meet this member? They were:</string>
    <string name="feedback_date_we_met">When we met:</string>
    <string name="feedback_send">Send feedback</string>
    <string name="lbl_feedback_overall_experience">What was your overall experience with %1$s?</string>
    <string name="feedback_how_we_met_error">You must select how you met this member.</string>
    <string name="feedback_overall_experience_error">You must choose a value for overall experience with this member</string>
    <string name="embedded_browser_warning">You have left the app and using an embedded browser to view Warmshowers.org. Use the back button to return to the app.</string>
    <string name="not_connected_to_network">You are not currently connected to the network.</string>
    <string name="title_fragment_user">Member Profile</string>
    <string name="user_service_shower">Shower</string>
    <string name="user_services_food">Food</string>
    <string name="user_services_bed">Bed</string>
    <string name="user_service_laundry">Laundry</string>
    <string name="user_service_storage">Storage</string>
    <string name="user_service_kitchen">Use of kitchen</string>
    <string name="user_service_tentspace">Lawn space (for camping)</string>
    <string name="user_service_sag">SAG (vehicle support)</string>
    <string name="label_feedback_for_this_member">Your feedback for this member:</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="text_search_title">Text Search</string>
    <string name="search_hint">Host name or city/town</string>
    <string name="action_search">Host search</string>
    <string name="contact_host">Contact Member</string>
    <string name="search_user_summary">Member since %1$s, last active %2$s</string>
    <string name="user_limitations">Max guests %1$d, Languages spoken %2$s</string>
    <string name="favorite_user">Favorite User</string>
    <string name="no_feedback_yet">No feedback yet</string>
    <string name="mobile_phone_abbrev">Mobile: %1$s</string>
    <string name="home_phone_abbrev">Home: %1$s</string>
    <string name="work_phone_abbrev">Work: %1$s</string>
    <string name="enabled">Enabled</string>
</resources>