<?xml version="1.0" encoding="utf-8"?>
<!--

Reflect changes in `app/src/google/res/xml/preferences.xml`.

-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/prefs_distance_unit_default"
        android:entries="@array/prefs_distance_unit_entries"
        android:entryValues="@array/prefs_distance_unit_entry_values"
        android:key="@string/prefs_distance_unit_key"
        android:summary="@string/prefs_distance_unit_summary"
        android:title="@string/prefs_distance_unit_title" />

    <ListPreference
        android:key="@string/prefs_tile_source_key"
        android:summary="@string/prefs_tile_source_summary"
        android:title="@string/prefs_tile_source_title" />

    <fi.bitrite.android.ws.ui.preference.RefreshIntervalPreference
        android:defaultValue="@integer/prefs_message_refresh_interval_min_default"
        android:dialogMessage="@string/prefs_message_refresh_interval_min_dialog_message"
        android:inputType="number"
        android:key="@string/prefs_message_refresh_interval_min_key"
        android:title="@string/prefs_message_refresh_interval_min_title" />

    <SwitchPreference
        android:defaultValue="@bool/prefs_data_saver_mode_default"
        android:key="@string/prefs_data_saver_mode_key"
        android:title="@string/prefs_data_saver_mode_title"
        android:summary="@string/prefs_data_saver_mode_summary"/>

</PreferenceScreen>
