<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:dividerPadding="-16dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:showDividers="middle">

        <TextView
            android:id="@+id/all_lbl_no_network_warning"
            style="@style/WsText.warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/not_connected_to_network" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/feedback_lbl_rating"
                style="@style/WsText.subHead"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_feedback_overall_experience" />

            <Spinner
                android:id="@+id/feedback_sel_rating"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="#00ffffff"
                android:entries="@array/feedback_rating_options"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <TextView
                style="@style/WsText.subHead"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_feedback_for_this_member" />

            <EditText
                android:id="@+id/feedback_txt_feedback"
                style="@style/WsInputText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#00ffffff"
                android:enabled="true"
                android:focusable="true"
                android:gravity="top"
                android:hint="@string/feedback_hint"
                android:inputType="text|textMultiLine|textCapSentences|textAutoCorrect"
                android:minLines="3"
                android:padding="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <TextView
                style="@style/WsText.subHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:labelFor="@id/feedback_txt_date_we_met"
                android:text="@string/feedback_date_we_met" />

            <EditText
                android:id="@+id/feedback_txt_date_we_met"
                style="@style/WsText.light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:focusable="false"
                android:hint="2018"
                android:inputType="date"
                android:paddingTop="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <TextView
                style="@style/WsText.subHead"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/feedback_sel_relation"
                android:text="@string/feedback_how_we_met_prompt" />

            <Spinner
                android:id="@+id/feedback_sel_relation"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="#00ffffff"
                android:entries="@array/feedback_relation_options"
                android:prompt="@string/feedback_how_we_met_prompt"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_horizontal_margin"

            android:paddingTop="@dimen/activity_horizontal_margin">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/all_btn_submit"
                style="@style/button_dark"
                android:theme="@style/button_primary_raised"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_send" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>

