<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryWhite"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/messages_lbl_no_network_warning"
        style="@style/WsText.warning"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_connected_to_network"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/messages_lbl_num_unread"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/WsText.subHead"
        android:text="You have no unread message" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="-16dp"
        android:background="@color/primaryTextColorLight"
        android:alpha="0.2" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="-4dp"
        android:gravity="left">

        <Button
            android:id="@+id/messages_btn_update_messages"
            style="@style/button_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updateMessages" />

        <Button
            android:id="@+id/messages_btn_view_on_site"
            style="@style/button_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewMessagesOnSite" />

    </LinearLayout>
</LinearLayout>

