<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar"/>

        <!-- activity view -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primaryWhite"
            android:divider="@drawable/divider"
            android:dividerPadding="-16dp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:showDividers="middle">

            <TextView
                android:id="@+id/noNetworkWarningContact"
                style="@style/WsText.warning"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:visibility="visible"
                tools:text="@string/not_connected_to_network"/>

            <EditText
                android:id="@+id/editContactHostSubject"
                style="@style/WsInputText.Headline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:hint="@string/subject_hint"
                android:inputType="text|textCapSentences"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <requestFocus/>
            </EditText>

            <EditText
                android:id="@+id/editContactHostMessage"
                style="@style/WsInputText"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:gravity="top"
                android:hint="@string/message_hint"
                android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
                android:minHeight="200dp"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"/>

            <Button
                android:id="@+id/btnHostContact"
                style="@style/button_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:onClick="sendMessageToHost"
                android:text="@string/send_message"
                />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/navigation_drawer"/>

</android.support.v4.widget.DrawerLayout>