<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="48dp"
    android:layout_marginTop="48dp"
    android:overScrollMode="ifContentScrolls">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@android:id/message"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/prefs_message_refresh_interval_min_dialog_message"
            android:textColor="?android:attr/textColorSecondary" />

        <Switch
            android:id="@+id/preference_dialog_refresh_interval_swt_enabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enabled" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/prefs_message_refresh_interval_min_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/preference_dialog_refresh_interval_edt_interval"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-4dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginEnd="-4dp"
                android:layout_marginRight="-4dp"
                android:inputType="number"
                android:text="@string/prefs_message_refresh_interval_min_hint" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>
